--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ShariqAyaz/nodetunnle#readme",
   "dependencies": {
+    "axios": "^1.6.5",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.9",
